--- a/histroy/diablo/css/style.css
+++ b/histroy/diablo/css/style.css
@@ -1,5 +1,5 @@
-/* È«¾ÖÑùÊ½ */
-body,div{ margin:0px; padding:0px; font-family:Tahoma,"Î¢ÈíÑÅºÚ","ËÎÌå"; color:#FFF; font-size:12px;}
+ï»¿/* å…¨å±€æ ·å¼ */
+body,div{ margin:0px; padding:0px; font-family:Tahoma,"å¾®è½¯é›…é»‘","å®‹ä½“"; color:#FFF; font-size:12px;}
 h1,h2,h3,h4,h5,p,span{ margin:0px; padding:0px;}
 div{ overflow:hidden;}
 table{ border:none 0px; margin:0px; padding:0px; border-collapse:collapse; border-spacing:0px 0px;}
@@ -9,12 +9,12 @@ input{ outline:0;}
 a{ text-decoration:none; outline:0;}
 
 
-/* indexMainÇøÓòÑùÊ½*/
-.indexMain{ background:#282828; margin:20px;}												/*Ö÷ÒªÄÚÈİÇøbodyÑùÊ½*/
+/* indexMainåŒºåŸŸæ ·å¼*/
+.indexMain{ background:#282828; margin:20px;}												/*ä¸»è¦å†…å®¹åŒºbodyæ ·å¼*/
 
 
-/* indexLeftÇøÓòÑùÊ½*/
-.indexLeft{ background:#313131 url(../images/indexLeftLine.png) top right repeat-y;}		/*×ó²àµ¼º½ÇøbodyÑùÊ½*/
+/* indexLeftåŒºåŸŸæ ·å¼*/
+.indexLeft{ background:#313131 url(../images/indexLeftLine.png) top right repeat-y;}		/*å·¦ä¾§å¯¼èˆªåŒºbodyæ ·å¼*/
 .toolNav{ width:162px; margin:0px auto;}
 .toolNav li{ width:162px; height:37px; background:url(../images/indexLeftNav.png) 0px 0px no-repeat; text-align:center; margin-bottom:10px;}
 .toolNav li:hover{ background:url(../images/indexLeftNav.png) 0px -80px no-repeat;}
@@ -24,31 +24,31 @@ a{ text-decoration:none; outline:0;}
 .toolNav li a:active{ color:#999;}
 
 
-/* DiabloTable·ç¸ñÑùÊ½*/
+/* DiabloTableé£æ ¼æ ·å¼*/
 .diabloTable{ margin:0px auto; text-align:right; border-collapse:collapse; border-spacing:0px 0px; border:0px none; cursor:default;}
 .diabloTable th{ color:#FFF; text-align:right;}
 .diabloTable thead tr:first-child th{ height:30px; font-size:14px; text-align:center; border-top:#d76767 1px solid;}
 .diabloTable thead tr:first-child th:first-child{ background:url(../images/diabloTableThead.png) 0px -31px repeat-x;}
 .diabloTable thead tr th{ height:28px; font-size:13px; text-align:center; background:url(../images/diabloTableThead.png) repeat-x; border-left:#882525 1px solid; padding:0px 6px;}
-.diabloTable thead tr th:first-child{ border-left:0px none;}	/*´¦ÀíµÚÒ»¸öth×ó²àÎŞ±ß¿ò*/
+.diabloTable thead tr th:first-child{ border-left:0px none;}	/*å¤„ç†ç¬¬ä¸€ä¸ªthå·¦ä¾§æ— è¾¹æ¡†*/
 .diabloTable tbody{ border-left:#282828 1px solid;}
 .diabloTable tbody tr{ border-bottom:#474747 1px solid;}
-.diabloTable tbody tr:first-child{ background:#313131 url(../images/diabloTableThead.png) 0px -89px repeat-x; border-top:#191919 1px solid;}	/*´¦ÀíµÚÒ»ĞĞtrÒõÓ°É«*/
+.diabloTable tbody tr:first-child{ background:#313131 url(../images/diabloTableThead.png) 0px -89px repeat-x; border-top:#191919 1px solid;}	/*å¤„ç†ç¬¬ä¸€è¡Œtré˜´å½±è‰²*/
 .diabloTable tbody tr th{ width:111px; padding:0px 8px 0px 0px;}
 .diabloTable tbody tr td{ height:26px; color:#d5d5d5; border-left:#474747 1px solid; padding:0px 8px;}
 .diabloTable .important1{ color:#60ff00; font-weight:bold;}
 .diabloTable .important2{ color:#ff9c00; font-weight:bold;}
 
-.diabloTable_evenTrStyle{ background:#313131;}	/*ÆæÊıĞĞ±³¾°É«*/
-.diabloTable_oddTrStyle{ background:#3c3c3c;}	/*Å¼ÊıĞĞ±³¾°É«*/
-.diabloTable_emptyTdStyle{ background:#242424;}	/*¿Õ±í¸ñ±³¾°É«*/
+.diabloTable_evenTrStyle{ background:#313131;}	/*å¥‡æ•°è¡ŒèƒŒæ™¯è‰²*/
+.diabloTable_oddTrStyle{ background:#3c3c3c;}	/*å¶æ•°è¡ŒèƒŒæ™¯è‰²*/
+.diabloTable_emptyTdStyle{ background:#242424;}	/*ç©ºè¡¨æ ¼èƒŒæ™¯è‰²*/
 .diabloTable_trHover{ border:#d64141 1px solid;}
 .diabloTable_trHover td, .diabloTable_trHover th{ border-top:#d64141 1px solid; border-bottom:#d64141 1px solid;}
-.diabloTable_tdYHover{ background:#000;}		/*Ñ¡ÖĞ×İÁĞ±³¾°É«*/
-.diabloTable_tdSelected{ background:#851c09; font-weight:bold;}	/*Ñ¡ÖĞtdÑùÊ½*/
+.diabloTable_tdYHover{ background:#000;}		/*é€‰ä¸­çºµåˆ—èƒŒæ™¯è‰²*/
+.diabloTable_tdSelected{ background:#851c09; font-weight:bold;}	/*é€‰ä¸­tdæ ·å¼*/
 
 
-/* Ö°ÒµÑ¡ÔñÑùÊ½ */
+/* èŒä¸šé€‰æ‹©æ ·å¼ */
 .classes{ width:1000px; color:#FFF; font-size:14px; text-align:center; margin:20px auto;}
 .classes span{ font-weight:bold;}
 
