--- a/histroy/diablo/css/welcome.css
+++ b/histroy/diablo/css/welcome.css
@@ -1,3 +1,3 @@
-#welcomePic{ color:#FFF; text-align:center; padding-top:340px; margin:50px auto; background:url(../images/welcomePic.jpg) center top no-repeat;}
+﻿#welcomePic{ color:#FFF; text-align:center; padding-top:340px; margin:50px auto; background:url(../images/welcomePic.jpg) center top no-repeat;}
 #welcomePic h2{ font-size:15px; line-height:50px;}
 #welcomePic p{ font-size:12px; line-height:18px;}
