--- a/histroy/hity/css/default.css
+++ b/histroy/hity/css/default.css
@@ -1,7 +1,7 @@
-/* È«¾ÖÑùÊ½ */
+ï»¿/* å…¨å±€æ ·å¼ */
 @font-face{ font-family:digital; src:url(../fonts/DS-DIGI.eot);}
 @font-face{ font-family:digital; src:url(../fonts/DS-DIGI.ttf);}
-body,div{ margin:0px; padding:0px; color:#000; font-family:Tahoma,Arial,"ËÎÌå"; font-size:12px; font-weight:normal;}
+body,div{ margin:0px; padding:0px; color:#000; font-family:Tahoma,Arial,"å®‹ä½“"; font-size:12px; font-weight:normal;}
 div{ overflow:hidden;}
 ul{ list-style:none; margin:0px; padding:0px;}
 img{ border:none 0px;}
