--- a/histroy/virtualKeyboard/css/print.css
+++ b/histroy/virtualKeyboard/css/print.css
@@ -1,4 +1,4 @@
-body,div{ margin:0pt; padding:0pt; color:#000; font-family:"ËÎÌå"; font-size:12pt; font-weight:normal;}
+ï»¿body,div{ margin:0pt; padding:0pt; color:#000; font-family:"å®‹ä½“"; font-size:12pt; font-weight:normal;}
 #top,#left,#bottom{ display:none;}
 #right #title,#right .printButton{ display:none;}
 #right{ width:100%; height:auto; float:none;}
