--- a/histroy/homepage/css/main.css
+++ b/histroy/homepage/css/main.css
@@ -1,5 +1,5 @@
-/* È«¾ÖÑùÊ½ */
-body,div{ margin:0px; padding:0px; color:#FFF; font-family:Tahoma,"ËÎÌå"; font-size:12px; font-weight:normal;}
+ï»¿/* å…¨å±€æ ·å¼ */
+body,div{ margin:0px; padding:0px; color:#FFF; font-family:Tahoma,"å®‹ä½“"; font-size:12px; font-weight:normal;}
 h1,h2,h3,h4,h5,p,span{ margin:0px; padding:0px;}
 div{ overflow:hidden;}
 table{ border:none 0px; margin:0px; padding:0px; border-collapse:collapse; border-spacing:0px 0px;}
@@ -10,7 +10,7 @@ a{ text-decoration:none; color:#FFF; outline:0;}
 a:hover{ text-decoration:underline;}
 body{ background:#1a1a1a url(../images/bgPic.jpg) center top no-repeat fixed;}
 
-/* ¶¥²¿ĞÅÏ¢Ìõ */
+/* é¡¶éƒ¨ä¿¡æ¯æ¡ */
 #topBar{ width:100%; height:20px; background:url(../images/topBarBg.png) repeat-x; position:fixed; top:0px; left:0px; z-index:10;}
 #topBar #center{ width:1000px; margin:0px auto;}
 #topBar #center span{ color:#CCC; line-height:19px; font-family:Tahoma; font-weight:bold; font-size:13px;}
@@ -18,10 +18,10 @@ body{ background:#1a1a1a url(../images/bgPic.jpg) center top no-repeat fixed;}
 #topBar #center #time{ float:right;}
 
 
-/* Ö÷ÄÚÈİ */
+/* ä¸»å†…å®¹ */
 #main{ width:1000px; margin:0px auto;}
 
-/* ×ó²àÈÕÆÚµ¼º½ */
+/* å·¦ä¾§æ—¥æœŸå¯¼èˆª */
 #main #dateNav{ width:60px; background:url(../images/dateNavLine.png) repeat-y right top; position:fixed; top:140px; left:auto; z-index:5;}
 #main #dateNav ul{ text-align:right; font-size:13px; line-height:26px; margin:15px 1px 15px 0px; text-shadow:1px 1px 0px #000;}
 #main #dateNav ul li{ padding-right:10px; cursor:pointer;}
@@ -29,31 +29,31 @@ body{ background:#1a1a1a url(../images/bgPic.jpg) center top no-repeat fixed;}
 #main #dateNav ul li a{ display:block;}
 #main #dateNav ul li a:hover{ color:#87c9e4; text-decoration:none;}
 
-/* ÓÒ²àÖ÷ÒªÏîÄ¿ÄÚÈİ */
+/* å³ä¾§ä¸»è¦é¡¹ç›®å†…å®¹ */
 #main #mainTop{ width:900px; height:122px; background:url(../images/bgPicMask.png) no-repeat; margin:0px 0px 0px 60px; position:fixed; top:0px; left:auto; z-index:8}
 #main #mainContent{ width:900px; background:url(../images/dateLineBg.png) repeat-y 72px top; margin:122px 0px 0px 60px;}
 #main #mainBottom{ width:900px; height:100px; background:url(../images/dateLineBottom.png) no-repeat 72px top; margin:-2px 0px 0px 60px;}
-/* #mainContentÖĞµÄÄÚÈİ(ÏîÄ¿Ê±¼ä¡¢µã¡¢ÄÚÈİÑ­»·) */
+/* #mainContentä¸­çš„å†…å®¹(é¡¹ç›®æ—¶é—´ã€ç‚¹ã€å†…å®¹å¾ªç¯) */
 .project{ margin-top:20px;}
 .project .date{ width:100px; height:18px; background:url(../images/dateLineDot.png) no-repeat right top; margin-top:14px; float:left;}
 .project .date span{ text-align:right; font-size:14px; font-weight:bold; line-height:16px; float:right; margin-right:45px; text-shadow:1px 1px 0px #000;}
 .project .box{ width:798px; background:rgba(243,254,255,0.9); border:rgba(255,255,255,0.8) 1px solid; border-radius:5px; box-shadow:0px 0px 5px #000; margin-left:-1px;}
 .project .box:hover{ background:rgba(255,255,255,1);}
-/* .project.boxÖĞµÄÄÚÈİ(ÏîÄ¿Ãû³Æ¡¢½éÉÜ¡¢Í¼Æ¬) */
+/* .project.boxä¸­çš„å†…å®¹(é¡¹ç›®åç§°ã€ä»‹ç»ã€å›¾ç‰‡) */
 .project .box .pic{ width:375px; height:174px; border:#c6c6c6 1px solid; background:#FFF; margin:11px; float:right; cursor:pointer;}
 .project .box .pic img{ width:371px; margin:2px;}
 .project .box .title{ height:29px; margin:9px 0px 0px 14px;}
-.project .box .title h2{ color:#333; font-family:"Î¢ÈíÑÅºÚ","ºÚÌå"; font-size:18px; font-weight:bold; float:left;}
+.project .box .title h2{ color:#333; font-family:"å¾®è½¯é›…é»‘","é»‘ä½“"; font-size:18px; font-weight:bold; float:left;}
 .project .box .title font{ font-family:DaunPenh; font-size:30px; float:right;}
-.project .box .tag{ height:20px; font-family:"ËÎÌå"; border-bottom:#999 1px dotted; margin:0px 0px 0px 14px;}
+.project .box .tag{ height:20px; font-family:"å®‹ä½“"; border-bottom:#999 1px dotted; margin:0px 0px 0px 14px;}
 .project .box .tag p{ color:#5f5f5f; float:left;}
 .project .box .tag span{ color:#005eac; float:right;}
 .project .box .tag span a{ color:#005eac;}
 .project .box .text{ color:#333; text-align:justify; line-height:21px; margin:3px 0px 0px 14px; text-indent:2em;}
 
-/* °æÈ¨ĞÅÏ¢ */
+/* ç‰ˆæƒä¿¡æ¯ */
 #main #mainBottom p{ line-height:22px; margin:25px 0px 0px 100px;}
 
-/* µ¯³öÍ¼Æ¬ */
+/* å¼¹å‡ºå›¾ç‰‡ */
 #popupPic{ width:100%; height:100%; background:rgba(255,255,255,0.3); text-align:center; overflow:auto; position:fixed; top:0px; left:0px; z-index:8; cursor:pointer;}
 #popupPic img{ margin:19px; background:url(../images/loading.gif) no-repeat 50% 50%;}
