--- a/histroy/virtualKeyboard/css/virtualKeyboard.css
+++ b/histroy/virtualKeyboard/css/virtualKeyboard.css
@@ -1,4 +1,4 @@
-/* È«¾ÖÑùÊ½ */
+ï»¿/* å…¨å±€æ ·å¼ */
 body,div{ margin:0px; padding:0px;}
 div{ overflow:hidden;}
 ul{ list-style:none; margin:0px; padding:0px;}
@@ -6,50 +6,50 @@ img{ border:none 0px;}
 input{ border:none; outline:0;}
 body{ background:#000 url(../images/mainBg.jpg) center top no-repeat; cursor:default;}
 
-/*ËÑË÷±íµ¥*/
+/*æœç´¢è¡¨å•*/
 #searchForm{ width:900px; height:42px; margin:93px auto 10px auto;}
-#searchForm .searchBar{ width:569px; height:42px; background:url(../images/searchBar.png) no-repeat; color:#5b5b5b; font-family:"Î¢ÈíÑÅºÚ"; font-size:20px; font-weight:bold; padding:0px 10px 0px 40px; line-height:44px; vertical-align:top;}
+#searchForm .searchBar{ width:569px; height:42px; background:url(../images/searchBar.png) no-repeat; color:#5b5b5b; font-family:"å¾®è½¯é›…é»‘"; font-size:20px; font-weight:bold; padding:0px 10px 0px 40px; line-height:44px; vertical-align:top;}
 #searchForm .searchButton{ width:173px; height:42px; background:url(../images/searchButton.png) no-repeat; cursor:pointer; vertical-align:top; margin-bottom:8px;}
 #searchForm .searchButton:hover{ background:url(../images/searchButton_hover.png) no-repeat;}
 
-/*ĞéÄâ¼üÅÌ±³¾°*/
+/*è™šæ‹Ÿé”®ç›˜èƒŒæ™¯*/
 #virtualKeyboard{ width:861px; height:280px; background:url(../images/virtualKeyboardBg.png) no-repeat; margin:0px auto; padding:15px 0px 0px 14px;}
 #virtualKeyboard .line1, .line2, .line3, .line4, .line5{ clear:left;}
-/*ÆÕÍ¨ÊäÈë°´¼ü*/
+/*æ™®é€šè¾“å…¥æŒ‰é”®*/
 #virtualKeyboard .inputButton{ width:50px; height:50px; background:url(../images/inputButton.png) no-repeat; color:#000; font-size:22px; font-family:Tahoma; text-align:center; line-height:50px; margin:0px 4px 4px 0px; cursor:pointer; float:left;}
 #virtualKeyboard .inputButton:hover{ color:#FFF; background:url(../images/inputButton_hover.png) no-repeat;}
-/*ÆÕÍ¨ÊäÈë°´¼ü-¿í¶È70*/
+/*æ™®é€šè¾“å…¥æŒ‰é”®-å®½åº¦70*/
 #virtualKeyboard .inputButton70{ width:70px; background:url(../images/inputButton70.png) no-repeat;}
 #virtualKeyboard .inputButton70:hover{ background:url(../images/inputButton70_hover.png) no-repeat;}
-/*ÍË¸ñ¼ü*/
+/*é€€æ ¼é”®*/
 #virtualKeyboard .backButton{ width:92px; background:url(../images/backButton.png) no-repeat;}
 #virtualKeyboard .backButton:hover{ background:url(../images/backButton_hover.png) no-repeat;}
-/*Tab¼ü*/
+/*Tabé”®*/
 #virtualKeyboard .tabButton{ width:72px; background:url(../images/tabButton.png) no-repeat;}
 #virtualKeyboard .tabButton:hover{ background:url(../images/tabButton_hover.png) no-repeat;}
-/*´óĞ¡Ğ´ÇĞ»»¼ü*/
+/*å¤§å°å†™åˆ‡æ¢é”®*/
 #virtualKeyboard .capsLockButton{ width:94px; background:url(../images/capsLockButton_off.png) no-repeat;}
 #virtualKeyboard .capsLockButton_on{ background:url(../images/capsLockButton_on.png) no-repeat;}
 #virtualKeyboard .capsLockButton_off{ background:url(../images/capsLockButton_off.png) no-repeat;}
 #virtualKeyboard .capsLockButton:hover{ background:url(../images/capsLockButton_hover.png) no-repeat;}
-/*»Ø³µ¼ü*/
+/*å›è½¦é”®*/
 #virtualKeyboard .enterButton{ width:102px; background:url(../images/enterButton.png) no-repeat;}
 #virtualKeyboard .enterButton:hover{ background:url(../images/enterButton_hover.png) no-repeat;}
-/*×ó²àShift¼ü*/
+/*å·¦ä¾§Shifté”®*/
 #virtualKeyboard .leftShiftButton{ width:116px; background:url(../images/leftShiftButton.png) no-repeat;}
 #virtualKeyboard .leftShiftButton:hover{ background:url(../images/leftShiftButton_hover.png) no-repeat;}
-/*ÓÒ²àShift¼ü*/
+/*å³ä¾§Shifté”®*/
 #virtualKeyboard .rightShiftButton{ width:134px; background:url(../images/rightShiftButton.png) no-repeat;}
 #virtualKeyboard .rightShiftButton:hover{ background:url(../images/rightShiftButton_hover.png) no-repeat;}
-/*Ctrl¼ü*/
+/*Ctrlé”®*/
 #virtualKeyboard .ctrlButton{ width:70px; background:url(../images/ctrlButton.png) no-repeat;}
 #virtualKeyboard .ctrlButton:hover{ background:url(../images/ctrlButton_hover.png) no-repeat;}
-/*Alt¼ü*/
+/*Alté”®*/
 #virtualKeyboard .altButton{ width:70px; background:url(../images/altButton.png) no-repeat;}
 #virtualKeyboard .altButton:hover{ background:url(../images/altButton_hover.png) no-repeat;}
-/*¿Õ¸ñ¼ü*/
+/*ç©ºæ ¼é”®*/
 #virtualKeyboard .spaceButton{ width:336px; background:url(../images/spaceButton.png) no-repeat;}
 #virtualKeyboard .spaceButton:hover{ background:url(../images/spaceButton_hover.png) no-repeat;}
-/*Del¼ü*/
+/*Delé”®*/
 #virtualKeyboard .delButton{ width:50px; background:url(../images/delButton.png) no-repeat;}
 #virtualKeyboard .delButton:hover{ background:url(../images/delButton_hover.png) no-repeat;}
